Modified genertae sign-in sheets: * Allow selecting which night(s) to generate

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Cubs-Signin.docx
 Keas-Signin.docx
 Cubs-Badge Report.docx
 Keas-Badge Report.docx
+Cubs Sign in Sheet - *.docx
+Keas Sign in Sheet - *.docx
