Added new badge

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Cubs-Badge Report.docx
 Keas-Badge Report.docx
 Cubs Sign in Sheet - *.docx
 Keas Sign in Sheet - *.docx
+Badge Report.pdf
+Cubs-Badge Progress.docx
